HW Relnotes template: Rework platforms for 15.0
Increase utility of the hardware release note by using the official
trade name of the architecture for it's subsection heading, followed
by the hyperlinked name of the freebsd project for that architecture.
In this hardware release note, I am also claiming a minimum RAM req.

This rewrite removes platforms which are no longer shipping in 15.0,
reorganizes the platforms subsections alpheabetically by project,
rewrites the introductory paragraps for each section to accomidate
for this (and past, really) reflow(s), and refreshes the powerpc
subsection with information from ppc@ and the platforms page.

I wish people using niche architectures to clean up their platforms
pages over the next two months. There is good information in there
drowning in a sea of stale info. This looks bad upon the project and
is subject to getting lost in a website rewrite.

Discussed with:	antranigv, cperciva, dch, emaste, michaeldexter

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -19,34 +19,28 @@ toc::[]
 [[intro]]
 == Introduction
 
-This document contains the hardware compatibility notes for FreeBSD {localRel}.
-It lists the hardware platforms supported by FreeBSD, as well as the various types of hardware devices (storage controllers, network interfaces, and so on), along with known working instances of these devices.
+This hardware compatibility note describes all hardware known to work with FreeBSD {localRel}.
+Other configurations may also work, but simply have not been tested yet.
+Feedback, updates, and corrections to this list are encouraged!
 
 [[proc]]
-== Supported Processors and System Boards
+== Supported Platforms
 
-This section provides some architecture-specific information about the specific processors and systems that are supported by each architecture.
+This section describes the CPU architectures currently supported by the FreeBSD Platform projects, their support tiers, and the systems that are supported by each Platform.
 
 [[proc-amd64]]
-=== 64-bit x86 (amd64) Architecture Support
+=== x86-64
 
-FreeBSD supports the AMD64 ("Hammer") and Intel(R) EM64T architectures.
-AMD64 (also known as x86-64) is a fully-supported Tier 1 architecture.
-AMD64 supports all modern x86 processors.
+crossref:platforms[amd64,FreeBSD/amd64] supports x86-64 as a fully-supported, crossref:committers-guide[archs,Tier-1] architecture.
+Release media is expected to work on all x86-64 machines with at least 256 MiB of RAM.
 This release incorporates optimizations and enhancements to leverage the full capabilities of FreeBSD/amd64-based systems, delivering improved performance across a wide range of workloads.
 
-[[proc-i386]]
-=== 32-bit x86 (i386) Architecture Support
-
-While FreeBSD continues to evolve and optimize for modern architectures, we are committed to maintaining support for the venerable i386 (x86) architecture in this release.
-Although i386 hardware is becoming less common, FreeBSD remains a reliable and versatile choice for those who still rely on it, whether for legacy systems or specific use cases.
-
 [[proc-arm-64]]
-=== 64-bit ARM (aarch64) Architecture Support
+=== AArch64
 
-FreeBSD supports 64-bit ARM (known as arm64 or AArch64) as a Tier-1 architecture.
+crossref:platforms[arm64,FreeBSD/aarch64] supports 64-bit ARM (ARMv9 and ARMv8) as a crossref:committers-guide[archs,Tier-1] architecture.
 
-FreeBSD currently supports the following devices:
+The following devices are currently supported:
 
 Ampere Computing:
 
@@ -54,7 +48,7 @@ Ampere Computing:
 * Altra
 * eMAG
 
-Allwinner (64-bit), more info about the support at the link:https://wiki.freebsd.org/arm/Allwinner[Allwinner Wiki page]:
+link:https://wiki.freebsd.org/arm/Allwinner[Allwinner]:
 
 * Allwinner A64 SoC
 * A64-Olinuxino
@@ -90,13 +84,13 @@ NXP Semiconductors:
 * SolidRun HoneyComb LX2
 * Traverse Technologies Ten64
 
-Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
+link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 
 * Raspberry Pi Zero 2 W
 * Raspberry Pi 3
 * Raspberry Pi 4
 
-RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.org/arm/RockChip[RockChip Wiki page]:
+link:https://wiki.freebsd.org/arm/RockChip[RockChip]:
 
 * RK3328 SoC
 * RK3399 SoC
@@ -111,14 +105,18 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 * Rock64
 * RockPro64
 
-Zedboard Zynq 7000 SoC
+Zedboard:
+
+* Zynq 7000 SoC
 
 [[proc-arm-32]]
-=== 32-bit ARM (armv6, armv7) Architecture Support
+=== AArch32
 
-FreeBSD currently supports the following devices:
+crossref:platforms[armv7,FreeBSD/armv7] supports 32-bit ARM (ARM-v7 and up) as a crossref:committers-guide[archs,Tier-2] architecture.
 
-Allwinner (32-bit), more info about the support at the link:https://wiki.freebsd.org/arm/Allwinner[Allwinner Wiki page]:
+The following devices are currently supported:
+
+link:https://wiki.freebsd.org/arm/Allwinner[Allwinner]:
 
 * Allwinner A10 SoC
 * Allwinner A13/R8 SoC
@@ -144,23 +142,58 @@ Allwinner (32-bit), more info about the support at the link:https://wiki.freebsd
 * Orange Pi Zero
 * NanoPI NEO
 
-NXP i.MX6 (32-bit), more info about the support at the link:https://wiki.freebsd.org/arm/imx6[NXP i.MX6 Wiki page]:
+link:https://wiki.freebsd.org/arm/imx6[NXP i.MX6]:
 
 * Wandboard
 * CuBox i
 * HummingBoard
 
-Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
+link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 
-* Raspberry Pi 1
-* Raspberry Pi 2
-* Raspberry Pi Zero
-* RPi Zero W
+* Raspberry Pi 2 (pre v1.2)
+
+[[proc-powerpc]]
+=== POWER
+
+FreeBSD supports 64-bit POWER as a crossref:committers-guide[archs,Tier-2] architecture.
+
+crossref:platforms[powerpc,FreeBSD/powerpc64le] supports 64-bit, bi-endian POWER9 and POWER8, including:
+
+IBM:
+
+* Power System LC922 (POWER9)
+* Power System IC922 (POWER8)
+
+QEMU
+
+* PowerNV
+
+Raptor CS:
+
+* Talos II (POWER9)
+* Blackbird (POWER9)
+
+crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER7 through POWER4, including:
+
+A-EON:
+
+* AmigaONE X5000 (NXP QorIQ P5)
+
+Apple:
+
+* Power Mac G5 (PowerPC 970)
+* Xserve G5 (PowerPC 970)
+
+IBM:
+
+* pSeries VM
 
 [[proc-risc-v]]
-=== RISC-V Architecture Support
+=== RISC-V
 
-RISC-V support in FreeBSD represents a significant milestone in the evolution of this open-source operating system.
+link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] supports 64-bit RISC-V as a crossref:committers-guide[archs,Tier-2] architecture.
+
+RISC-V support represents a significant milestone in the evolution of this open-source operating system.
 FreeBSD was the first operating system to have bootable in-tree support for RISC-V, underscoring its commitment to embracing emerging hardware architectures.
 
 FreeBSD currently supports the following platforms:
@@ -170,20 +203,6 @@ FreeBSD currently supports the following platforms:
 * StarFive VisionFive 2 (StarFive JH7110)
 * Spike
 * QEMU
-
-More information about the support at the link:https://wiki.freebsd.org/riscv[RISC-V Wiki page].
-
-[[proc-powerpc]]
-=== PowerPC Architecture Support
-
-Many PowerPC platforms are supported, including but not limited to:
-
-* Apple PowerMac G4 and later.
-* IBM POWER4 and later using pseries VM platform.
-* IBM POWER8 and later bare metal powernv
-** Most development done using Raptor TALOS-II
-* Embedded NXP QorIQ and PowerQUICC III (MPC85XX, Pxxx)
-** Tested on AmigaOne X5000 and AmigaOne A1222
 
 // The "Supported Devices" section of the release notes.
 // Generally processor-independent, with conditional text
@@ -214,13 +233,9 @@ Many PowerPC platforms are supported, including but not limited to:
 [[support]]
 == Supported Devices
 
-This section describes the devices currently known to be supported by FreeBSD.
-Other configurations may also work, but simply have not been tested yet.
-Feedback, updates, and corrections to this list are encouraged.
-
-Where possible, the drivers applicable to each device or class of devices is listed.
+This section describes the devices currently known to be supported by each device driver in FreeBSD.
 If the driver in question has a manual page in the FreeBSD base distribution (most should), it is referenced here.
-Information on specific models of supported devices, controllers, etc. can be found in the manual pages.
+Information on usage, configuration, and specific models of supported devices, controllers, etc. can be found in the manual pages.
 
 [NOTE]
 ====
