--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -30,7 +30,6 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 === Legacy
 
 * *Release {rel135-current}* ({rel135-current-date}) _link:{u-rel135-announce}[Announcement] : link:{u-rel135-notes}[Release Notes] : link:{u-rel135-installation}[Installation Instructions] : link:{u-rel135-hardware}[Hardware Compatibility List] : link:{u-rel135-readme}[Readme] : link:{u-rel135-errata}[Errata] : link:{u-rel135-signatures}[Signed Checksums]_
-* *Release {rel142-current}* ({rel142-current-date}) _link:{u-rel142-announce}[Announcement] : link:{u-rel142-notes}[Release Notes] : link:{u-rel142-installation}[Installation Instructions] : link:{u-rel142-hardware}[Hardware Compatibility List] : link:{u-rel142-readme}[Readme] : link:{u-rel142-errata}[Errata] : link:{u-rel142-signatures}[Signed Checksums]_
 
 [[future]]
 == Future
@@ -44,6 +43,7 @@ The latest snapshots from our link:{handbook}cutting-edge/#stable[FreeBSD-STABLE
 
 For historical information about branches, release dates, types, and EOL dates, see link:../security/unsupported/[Unsupported Releases].
 
+* *14.2* ({rel142-current-date}) _link:{u-rel142-announce}[Announcement] : link:{u-rel142-notes}[Release Notes] : link:{u-rel142-installation}[Installation Instructions] : link:{u-rel142-hardware}[Hardware Compatibility List] : link:{u-rel142-readme}[Readme] : link:{u-rel142-errata}[Errata] : link:{u-rel142-signatures}[Signed Checksums]_
 * *14.1* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 * *14.0* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
 * *13.4* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
