--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -55,7 +55,7 @@ This table lists the code freeze status for major branches of the `src/` reposit
 |`stable/15` |Open |committers |Development branch for FreeBSD 15-STABLE.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
 |`releng/14.3` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.3 supported errata fix branch.
-|`releng/14.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.2 supported errata fix branch.
+|`releng/14.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.2 errata fix branch (not officially supported).
 |`releng/14.1` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.1 errata fix branch (not officially supported).
 |`releng/14.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.0 errata fix branch (not officially supported).
 |`stable/13` |Open |committers |Development branch for FreeBSD 13-STABLE.
