HW Relnotes template: Fix ar40xx entry
Fixes:	d9409910ec91 (HW Relnotes: Add a section for Etherswitch)

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -553,7 +553,7 @@ The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC
 
 The man:adm6996fc[4] driver supports the Infineon ADM6996FC Fast Ethernet switch controller.
 
-&hwlist.ar40xx;
+&hwlist.man4.arm/ar40xx;
 
 &hwlist.arswitch;
 
