HW Relnotes: Improve ehci entry
Differential Revision:	https://reviews.freebsd.org/D52846

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -758,6 +758,8 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 
 &hwlist.man4.powerpc/ams;
 
+The man:ehci[4] driver supports USB 2.0 controllers implementing the Enhanced Host Controller Interface standard.
+
 &hwlist.ohci;
 
 &hwlist.ugold;
@@ -765,8 +767,6 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 &hwlist.uhci;
 
 &hwlist.uipaq;
-
-[amd64, i386] USB 2.0 controllers using the EHCI interface (man:ehci[4] driver)
 
 [amd64, i386] Hubs
 
