HW Relnotes: Add mmcsd and thunderbolt

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -296,6 +296,8 @@ EISA adapters are not supported.
 EISA adapters are not supported.
 ====
 
+&hwlist.mmcsd;
+
 &hwlist.mpi3mr;
 
 &hwlist.mpr;
@@ -747,6 +749,8 @@ The man:ehci[4] driver supports USB 2.0 controllers implementing the Enhanced Ho
 &hwlist.umodem;
 
 &hwlist.rtsx;
+
+&hwlist.thunderbolt;
 
 &hwlist.ulpt;
 
