HW Relnotes template: Add umass

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -734,6 +734,8 @@ The man:ehci[4] driver supports USB 2.0 controllers implementing the Enhanced Ho
 
 &hwlist.uipaq;
 
+&hwlist.umass;
+
 [amd64, i386] Hubs
 
 [amd64, i386] Miscellaneous
