HW Relnotes template: Fix some Ethernet entries
+ the manuals for axge and et have a HARDWARE section, use that
+ normalize the style of ena and bfe

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -350,11 +350,11 @@ The following CD-ROM type systems are supported at this time:
 
 &hwlist.axe;
 
-ASIX Electronics AX88178A/AX88179 USB Gigabit Ethernet adapters (man:axge[4] driver)
+&hwlist.axge;
 
 &hwlist.bce;
 
-[amd64, i386] Broadcom BCM4401 based Fast Ethernet adapters (man:bfe[4] driver)
+The man:bfe[4] driver supports Broadcom BCM4401-based Fast Ethernet devices.
 
 &hwlist.bge;
 
@@ -380,13 +380,13 @@ ASIX Electronics AX88178A/AX88179 USB Gigabit Ethernet adapters (man:axge[4] dri
 
 &hwlist.em;
 
-FreeBSD kernel driver for Elastic Network Adapter (ENA) family (man:ena[4] driver)
+The man:ena[4] driver supports the AWS EC2 Elastic Network Adapter.
 
 &hwlist.enic;
 
 &hwlist.man4.i386/ep;
 
-Agere ET1310 Gigabit Ethernet adapters (man:et[4] driver)
+&hwlist.et;
 
 &hwlist.man4.i386/ex;
 
